[package]
name          = "safe_nfs"
version       = "0.2.1"
authors       = ["MaidSafe Developers <dev@maidsafe.net>"]
description   = "This is Pre alpha, and not useful, no code worth looking at."
documentation = "http://maidsafe.net/safe_nfs/latest"
repository    = "https://github.com/maidsafe/safe_nfs"
readme        = "README.md"
license       = "GPL-3.0"
homepage      = "http://maidsafe.net"

[dependencies]
# ---- Maidsafe ----
routing         = "0.4.*"
safe_core       = "0.3.*"
self_encryption = "0.2.*"

# ---- Others ----
log             = "*"
time            = "*"
sodiumoxide     = "*"
rustc-serialize = "*"

[features]
use-mock-routing = ["safe_core/use-mock-routing"]
