[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "This is Pre alpha, and not useful, no code worth looking at."
documentation = "http://maidsafe.net/safe_nfs/latest"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_nfs"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_nfs"
version = "0.4.0"

[dependencies]
log = "~0.3.4"
maidsafe_utilities = "~0.1.5"
routing = "~0.5.2"
rustc-serialize = "~0.3.16"
safe_core = "~0.4.0"
self_encryption = "~0.2.5"
sodiumoxide = "~0.0.9"
time = "~0.1.34"
xor_name = "~0.0.1"

[features]
use-mock-routing = ["safe_core/use-mock-routing"]
